==> sglee0223/stm32f103ve/at45dbxx_dataflash/at45dbxx_lib/at45dbxx.c <==
#include "stm32f1xx_hal.h"
#include "spi.h"
#include "usart.h"
#include "gpio.h"
#include <string.h>
#include "at45dbxx.h"
#include "dwt_stm32_delay.h"
#define CONFIG_AT45DB_PREWAIT
#define  at45db_pwrdown()
#define  at45db_resume()
#define CHIP_ERASE_SIZE 4
#define BINPGSIZE_SIZE 4

void at45db_active(void)
{
	HAL_GPIO_WritePin(CS_GPIO_Port, CS_Pin, GPIO_PIN_RESET);
}

void at45db_deactive(void)
{
 	HAL_GPIO_WritePin(CS_GPIO_Port, CS_Pin, GPIO_PIN_SET);
}

int at45db_rdid(void)
{
    uint8_t capacity;

	HAL_StatusTypeDef res;
	uint8_t cmd[1] = {0, };
	uint8_t devid[4] = {0, };

    at45db_active();

	cmd[0] = AT45DB_RDDEVID;
	res = HAL_SPI_Transmit(&hspi1, cmd, sizeof(cmd), HAL_MAX_DELAY);
	if (res != HAL_OK)
		printf("HAL_SPI_Transmit Error\r\n");

	res = HAL_SPI_Receive(&hspi1, devid, sizeof(devid), HAL_MAX_DELAY);
	if (res != HAL_OK)
		printf("HAL_SPI_Receive Error\r\n");

    at45db_deactive();

    printf("manufacturer: %02x devid1: %02x devid2: %02x\r\n", devid[0], devid[1], devid[2]);

    /* Check for a valid manufacturer and memory family */

    if (devid[0] == AT45DB_MANUFACTURER &&
        (devid[1] & AT45DB_DEVID1_FAMMSK) == AT45DB_DEVID1_DFLASH)
        {
        /* Okay.. is it a FLASH capacity that we understand? */

        capacity = devid[1] & AT45DB_DEVID1_CAPMSK;

				printf("capacity: %02x\r\n", capacity);

        switch (capacity)
        {
            case AT45DB_DEVID1_1MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB011 */

                priv.pageshift   = 8;    /* Page size = 256 bytes */
                priv.npages      = 512;  /* 512 pages */
                return 1;

            case AT45DB_DEVID1_2MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB021 */

                priv.pageshift   = 8;    /* Page size = 256/264 bytes */
                priv.npages      = 1024; /* 1024 pages */
                return 1;

            case AT45DB_DEVID1_4MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB041 */

                priv.pageshift   = 8;    /* Page size = 256/264 bytes */
                priv.npages      = 2048; /* 2048 pages */

								printf("4MBIT DataFlash\r\n");
                return 1;

            case AT45DB_DEVID1_8MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB081 */

                priv.pageshift   = 8;    /* Page size = 256/264 bytes */
                priv.npages      = 4096; /* 4096 pages */
                return 1;

            case AT45DB_DEVID1_16MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB161 */

                priv.pageshift   = 9;    /* Page size = 512/528 bytes */
                priv.npages      = 4096; /* 4096 pages */
                return 1;

            case AT45DB_DEVID1_32MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB321 */

                priv.pageshift   = 9;    /* Page size = 512/528 bytes */
                priv.npages      = 8192; /* 8192 pages */
                return 1;

            case AT45DB_DEVID1_64MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB321 */

                priv.pageshift   = 10;   /* Page size = 1024/1056 bytes */
                priv.npages      = 8192; /* 8192 pages */
                return 1;

            default:
                return -1;
        }
    }

    return -1;
}

uint8_t at45db_rdsr(void)
{
	HAL_StatusTypeDef res;
	uint8_t cmd[1] = {0, };
	uint8_t status[1] = {0, };

	at45db_active();

	cmd[0] = AT45DB_RDSR;
	res = HAL_SPI_Transmit(&hspi1, cmd, sizeof(cmd), HAL_MAX_DELAY);
	if (res != HAL_OK)
		printf("HAL_SPI_Transmit Error\r\n");

	res = HAL_SPI_Receive(&hspi1, status, sizeof(status), HAL_MAX_DELAY);
	if (res != HAL_OK)
		printf("HAL_SPI_Receive Error\r\n");

	at45db_deactive();

    return status[0];
}

void at45db_pgwrite(uint8_t *buffer, long page)
{
	HAL_StatusTypeDef res;
	uint8_t cmd[4] = {0, };
    uint32_t offset = page << priv.pageshift;

    printf("page: %08lx offset: %08lx\r\n", (long)page, (long)offset);

    /* We assume that sectors are not write protected */

    cmd[0] = AT45DB_MNTHRUBF1;      /* To main memory through buffer 1 */
    cmd[1] = (offset >> 16) & 0xff; /* 24-bit address MS byte */
    cmd[2] = (offset >>  8) & 0xff; /* 24-bit address middle byte */
    cmd[3] =  offset        & 0xff; /* 24-bit address LS byte */

    /* Higher performance write logic:  We leave the chip busy after write and erase
     * operations.  This improves write and erase performance because we do not have
     * to wait as long between transactions (other processing can occur while the chip
     * is busy) but means that the chip must stay powered and that we must check if
     * the chip is still busy on each entry point.
     */

#ifdef CONFIG_AT45DB_PREWAIT
    at45db_waitbusy();
#endif

    at45db_active();

    res = HAL_SPI_Transmit(&hspi1, cmd, sizeof(cmd), HAL_MAX_DELAY);
    if (res != HAL_OK)
    	printf("HAL_SPI_Transmit Error\r\n");

    res = HAL_SPI_Transmit(&hspi1, buffer, 1 << priv.pageshift, HAL_MAX_DELAY);
    if (res != HAL_OK)
    	printf("HAL_SPI_Transmit Error\r\n");

    at45db_deactive();

    /* Wait for any erase to complete if we are not trying to improve write
     * performance. (see comments above).
     */

#ifndef CONFIG_AT45DB_PREWAIT
    at45db_waitbusy();
#endif
    printf("Written\r\n");
}

int at45db_read(long offset, unsigned int nbytes, uint8_t *buffer)
{
	HAL_StatusTypeDef res;
	uint8_t cmd[5] = {0, };

    printf("offset: %08lx nbytes: %d\r\n", (long)offset, (int)nbytes);

    /* Set up for the read */

    cmd[0] = AT45DB_RDARRAYHF;       /* FAST_READ is safe at all supported SPI speeds. */
    cmd[1] = (offset >> 16) & 0xff;  /* 24-bit address upper byte */
    cmd[2] = (offset >>  8) & 0xff;  /* 24-bit address middle byte */
    cmd[3] =  offset        & 0xff;  /* 24-bit address least significant byte */
    cmd[4] = 0;                      /* Dummy byte */

    /* Take the lock so that we have exclusive access to the bus, then power up the
     * FLASH device.
     */
    at45db_resume();

    /* Higher performance write logic:  We leave the chip busy after write and erase
     * operations.  This improves write and erase performance because we do not have
     * to wait as long between transactions (other processing can occur while the chip
     * is busy) but means that the chip must stay powered and that we must check if
     * the chip is still busy on each entry point.
     */

#ifdef CONFIG_AT45DB_PREWAIT
    at45db_waitbusy();
#endif

  /* Perform the read */
    at45db_active();

	res = HAL_SPI_Transmit(&hspi1, cmd, sizeof(cmd), HAL_MAX_DELAY);
	if (res != HAL_OK)
        printf("HAL_SPI_Transmit Error\r\n");

	res = HAL_SPI_Receive(&hspi1, buffer, nbytes, HAL_MAX_DELAY);
	if (res != HAL_OK)
		printf("HAL_SPI_Transmit Error\r\n");

    at45db_deactive();

    at45db_pwrdown();

    printf("return nbytes: %d\r\n", (int)nbytes);

    return nbytes;
}

void FlashBuffer1Read(uint16_t start_addr, uint16_t len, uint8_t *buffer)
{
    HAL_StatusTypeDef res;
    uint8_t cmd[5] = {0, };

    printf("FlashBuffer1Read Start\r\n");

#ifdef CONFIG_AT45DB_PREWAIT
    at45db_waitbusy();
#endif

    at45db_active();

    cmd[0] = AT45DB_RDBF1;
    cmd[1] = 0x00;
    cmd[2] = (uint8_t)(start_addr>>8);
    cmd[3] = (uint8_t)(start_addr);
		cmd[4] = 0x00;  // Additional Don't Care Bytes
    res = HAL_SPI_Transmit(&hspi1, cmd, sizeof(cmd), HAL_MAX_DELAY);
    if (res != HAL_OK)
        printf("HAL_SPI_Transmit Error\r\n");

    res = HAL_SPI_Receive(&hspi1, buffer, len, HAL_MAX_DELAY);
    if (res != HAL_OK)
        printf("HAL_SPI_Receive Error\r\n");

    at45db_deactive();

#ifndef CONFIG_AT45DB_PREWAIT
    at45db_waitbusy();
#endif

    printf("FlashBuffer1Read End\r\n");
}
